feat: pf micro service and update details

--- a/pjms/pom.xml
+++ b/pjms/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>spring-cloud-stream-test-binder</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.syscode42</groupId>
+            <artifactId>auditms</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
